--- a/.github/workflows/lint-and-deploy-stats-db-migrations.yml
+++ b/.github/workflows/lint-and-deploy-stats-db-migrations.yml
@@ -41,14 +41,14 @@ jobs:
         with:
           python-version-file: "stats-db/pyproject.toml"
 
-      - name: Setup Atlas
-        uses: ariga/setup-atlas@v0
-
-      - name: Install uv
+      - name: Set up uv
         uses: astral-sh/setup-uv@v6
 
       - name: Install the project
         run: uv sync --directory stats-db --locked
+
+      - name: Set up Atlas
+        uses: ariga/setup-atlas@v0
 
       - name: Diff migrations
         id: diff
@@ -81,7 +81,18 @@ jobs:
         run: |
           echo "Environment: ${{ inputs.environment || 'development' }}"
 
-      - name: Setup Atlas
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version-file: "stats-db/pyproject.toml"
+
+      - name: Set up uv
+        uses: astral-sh/setup-uv@v6
+
+      - name: Install the project
+        run: uv sync --directory stats-db --locked
+
+      - name: Set up Atlas
         uses: ariga/setup-atlas@v0
 
       - name: Authenticate to Google Cloud
@@ -116,12 +127,9 @@ jobs:
           sleep 5
 
       - name: Lint migrations
-        uses: ariga/atlas-action/migrate/lint@v1
-        with:
-          dir: "stats-db/migrations"
-          dev-url: "mysql://${{ vars.STATS_DB_USER }}:${{ steps.gcp_secrets.outputs.STATS_DB_PASSWORD }}@localhost:3306/dev"
-        env:
-          GITHUB_TOKEN: "${{ github.token }}"
+        run: |
+          DB_URL="mysql://${{ vars.STATS_DB_USER }}:${{ steps.gcp_secrets.outputs.STATS_DB_PASSWORD }}@localhost:3306/${{ vars.STATS_DB_NAME }}"
+          atlas migrate lint --dev-url $DB_URL --git-base main
 
       - name: Stop Cloud SQL Proxy
         if: always()
@@ -138,12 +146,23 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        
+
       - name: Inspect environment
         run: |
           echo "Environment: ${{ inputs.environment || 'development' }}"
 
-      - name: Setup Atlas
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version-file: "stats-db/pyproject.toml"
+
+      - name: Set up uv
+        uses: astral-sh/setup-uv@v6
+
+      - name: Install the project
+        run: uv sync --directory stats-db --locked
+
+      - name: Set up Atlas
         uses: ariga/setup-atlas@v0
 
       - name: Authenticate to Google Cloud
@@ -177,11 +196,10 @@ jobs:
         run: |
           sleep 5
 
-      - name: Deploy
-        uses: ariga/atlas-action/migrate/apply@v1
-        with:
-          dir: "stats-db/migrations"
-          url: "mysql://${{ vars.STATS_DB_USER }}:${{ steps.gcp_secrets.outputs.STATS_DB_PASSWORD }}@localhost:3306/dev"
+      - name: Deploy migrations
+        run: |
+          DB_URL="mysql://${{ vars.STATS_DB_USER }}:${{ steps.gcp_secrets.outputs.STATS_DB_PASSWORD }}@localhost:3306/${{ vars.STATS_DB_NAME }}"
+          atlas migrate apply --url $DB_URL
 
       - name: Stop Cloud SQL Proxy
         if: always()
