--- a/.github/workflows/format-check-and-deploy-aggregate-hourly-downloads.yml
+++ b/.github/workflows/format-check-and-deploy-aggregate-hourly-downloads.yml
@@ -34,7 +34,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up terraform
-        uses: hashicorp/setup-terraform@v3 # uses version from terraform block
+        uses: hashicorp/setup-terraform@v3
+
+      - name: Check version
+        run: terraform --version
 
       - name: Format check
         run: terraform fmt -check
@@ -42,7 +45,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment || 'development' }}
-    if: github.ref == 'refs/heads/main'
+    # if: github.ref == 'refs/heads/main'
     needs: format-check
 
     steps:
@@ -64,7 +67,10 @@ jobs:
         uses: google-github-actions/setup-gcloud@v3
 
       - name: Set up terraform
-        uses: hashicorp/setup-terraform@v3 # uses version from terraform block
+        uses: hashicorp/setup-terraform@v3
+
+      - name: Check version
+        run: terraform --version
 
       - name: Initialize remote backend
         run: terraform init -backend-config=”bucket=${{ vars.ENV_VAR }}-arxiv-terraform-state”
