--- a/.github/workflows/format-check-and-deploy-aggregate-hourly-downloads.yml
+++ b/.github/workflows/format-check-and-deploy-aggregate-hourly-downloads.yml
@@ -74,7 +74,7 @@ jobs:
         run: terraform --version
 
       - name: Initialize remote backend
-        run: terraform init -backend-config=”bucket=${{ vars.ENV_VAR }}-arxiv-terraform-state”
+        run: terraform init --backend-config=”bucket=${{ vars.ENV_VAR }}-arxiv-terraform-state”
         working-directory: terraform/aggregate_hourly_downloads
 
       - name: Plan
