--- a/.github/workflows/deploy-or-update-stats-db.yml
+++ b/.github/workflows/deploy-or-update-stats-db.yml
@@ -84,7 +84,7 @@ jobs:
   manual-approval:
     permissions:
       contents: read
-      pull-requests: write
+      issues: write
       id-token: write
     runs-on: ubuntu-latest
     needs: plan
@@ -95,8 +95,8 @@ jobs:
       - name: Await for manual approval
         uses: trstringer/manual-approval@v1
         with:
-          secret: ${{ github.TOKEN }}
-          approvers: developers
+          secret: ${{ secrets.GITHUB_TOKEN }}
+          approvers: carly-jones
           minimum-approvals: 1
           issue-title: "Manual Approval Required to Deploy or Update Database"
           issue-body: "Please review the plan and approve or deny the deployment."
