fix path to plan

--- a/.github/workflows/deploy-or-update-stats-db.yml
+++ b/.github/workflows/deploy-or-update-stats-db.yml
@@ -140,5 +140,5 @@ jobs:
           path: terraform/stats_db/plan.tfout
 
       - name: Apply
-        run: terraform apply -var-file=envs/${{ vars.ENV_VAR }}.tfvars -auto-approve ./plan.tfout
+        run: terraform apply -var-file=envs/${{ vars.ENV_VAR }}.tfvars -auto-approve plan.tfout
         working-directory: terraform/stats_db
