--- a/.github/workflows/deploy-or-update-stats-db.yml
+++ b/.github/workflows/deploy-or-update-stats-db.yml
@@ -107,7 +107,7 @@ jobs:
       id-token: write
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment || 'development' }}
-    # if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main'
     needs: manual-approval
 
     steps:
