--- a/.github/workflows/deploy-stats-ui.yml
+++ b/.github/workflows/deploy-stats-ui.yml
@@ -7,6 +7,12 @@ on:
     paths:
       - "stats-ui/**"
       - "terraform/stats_ui/**"
+  pull_request:
+    branches:
+      - main
+    paths:
+      - "stats-ui/**"
+      - "terraform/stats_ui/**"
   workflow_dispatch:
     inputs:
       env:
@@ -28,9 +34,58 @@ env:
   PORT: "3000"
 
 jobs:
+  format-check:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up terraform
+        uses: hashicorp/setup-terraform@v3
+
+      - name: Check version
+        run: terraform --version
+
+      - name: Format check
+        run: terraform fmt -check
+
+  build-push:
+    runs-on: ubuntu-latest
+    environment: ${{ inputs.environment || 'development' }}
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v3
+        with:
+          workload_identity_provider: ${{ vars.PROVIDER_NAME }}
+          service_account: ${{ vars.SERVICE_ACCOUNT }}
+
+      - name: Set up Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@v3
+
+      - name: Configure Docker
+        run: gcloud auth configure-docker
+
+      - name: Build image, caching from latest
+        run: |
+          docker pull gcr.io/${{ vars.GCP_PROJECT_ID }}/${IMAGE_NAME}:latest
+
+          docker build --build-arg PORT=${PORT} -f ${DOCKERFILE} \
+          --cache-from gcr.io/${{ vars.GCP_PROJECT_ID }}/${IMAGE_NAME}:latest \
+          -t gcr.io/${{ vars.GCP_PROJECT_ID }}/${IMAGE_NAME}:${{ github.sha }} \
+          -t gcr.io/${{ vars.GCP_PROJECT_ID }}/${IMAGE_NAME}:latest .
+
+      - name: Push image
+        run: docker push --all-tags gcr.io/${{ vars.GCP_PROJECT_ID }}/${IMAGE_NAME}
+
   deploy:
     runs-on: ubuntu-latest
     environment: ${{ inputs.environment || 'development' }}
+    if: github.ref == 'refs/heads/main'
 
     steps:
       - name: Checkout code
