--- a/.github/workflows/deploy-stats-db.yml
+++ b/.github/workflows/deploy-stats-db.yml
@@ -7,7 +7,8 @@ on:
     paths:
       - "terraform/stats_db/**"
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
     paths:
       - "terraform/stats_db/**"
   workflow_dispatch:
