--- a/.github/workflows/lint-and-test-aggregate-hourly-downloads.yml
+++ b/.github/workflows/lint-and-test-aggregate-hourly-downloads.yml
@@ -2,16 +2,17 @@ name: Lint and test aggregate-hourly-downloads
 
 on:
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
     paths:
-      - 'stats-functions/aggregate_hourly_downloads/**'
-      
+      - "stats-functions/aggregate_hourly_downloads/**"
+
   workflow_dispatch:
     inputs:
       logLevel:
-        description: 'Log level'
+        description: "Log level"
         required: true
-        default: 'info'
+        default: "info"
 
 permissions:
   contents: read
@@ -21,25 +22,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.11"
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.11"
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r stats-functions/aggregate_hourly_downloads/src/requirements.txt
-        pip install -r stats-functions/aggregate_hourly_downloads/src/requirements-dev.txt
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r stats-functions/aggregate_hourly_downloads/src/requirements.txt
+          pip install -r stats-functions/aggregate_hourly_downloads/src/requirements-dev.txt
 
-    - name: Lint
-      run: |
-        ruff check --output-format=github stats-functions/aggregate_hourly_downloads/src
+      - name: Lint
+        run: |
+          ruff check --output-format=github stats-functions/aggregate_hourly_downloads/src
 
-    - name: Test with pytest
-      working-directory: stats-functions/aggregate_hourly_downloads
-      run: |
-        pytest
+      - name: Test with pytest
+        working-directory: stats-functions/aggregate_hourly_downloads
+        run: |
+          pytest
