--- a/.github/workflows/lint-and-test-api.yml
+++ b/.github/workflows/lint-and-test-api.yml
@@ -2,16 +2,17 @@ name: Lint and test stats-api
 
 on:
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
     paths:
-      - 'stats-api/**'
+      - "stats-api/**"
 
   workflow_dispatch:
     inputs:
       logLevel:
-        description: 'Log level'
+        description: "Log level"
         required: true
-        default: 'info'
+        default: "info"
 
 permissions:
   contents: read
@@ -21,23 +22,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: "Set up Python"
-      uses: actions/setup-python@v5
-      with:
-        python-version-file: "stats-api/pyproject.toml"
+      - name: "Set up Python"
+        uses: actions/setup-python@v5
+        with:
+          python-version-file: "stats-api/pyproject.toml"
 
-    - name: Install uv
-      uses: astral-sh/setup-uv@v6
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
 
-    - name: Install the project
-      run: uv sync --directory stats-api --locked --all-extras --dev
+      - name: Install the project
+        run: uv sync --directory stats-api --locked --all-extras --dev
 
-    - name: Lint
-      run: |
-        uv run --directory stats-api ruff check --output-format=github .
+      - name: Lint
+        run: |
+          uv run --directory stats-api ruff check --output-format=github .
 
-    - name: Run tests
-      run: uv run --directory stats-api pytest tests
+      - name: Run tests
+        run: uv run --directory stats-api pytest tests
