--- a/.github/workflows/lint-stats-db-migrations.yml
+++ b/.github/workflows/lint-stats-db-migrations.yml
@@ -2,7 +2,8 @@ name: Lint stats-db migrations
 
 on:
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
     paths:
       - "stats-entities/**"
       - "stats-db/migrations/*"
